# tool-first-agent

./: .gitignore  CLAUDE-CODE-INSTALL.zh-CN.md  CODEX-INSTALL.zh-CN.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SKILL.md  memory_config.yaml
crates/tool-first/: Cargo.toml
crates/tool-first/src/: advice.rs  config.rs  detect.rs  file_store.rs  main.rs  mcp.rs  memory.rs  registry.rs  resolver.rs
references/: agent-integration.md  claude-code-integration.md  hindsight-memory-format.md  mcp-integration.md  memory-home-resolution.md  memory-migration-guide.md  registry-schema.md  rust-runtime-design.md  scanning-policy.md  soul-rule-integration.md  tool-memory-format.md
registry/: tools.yaml
scripts/: detect-tools.py  import-registry-to-hindsight.py  query-registry.py  recall-tool-memory.sh  refresh-inventory.sh  register-tool.py  retain-tool-memory.py  validate-tags.sh
