[package]
name = "tool-first"
version = "0.1.0"
edition = "2021"
description = "Fast local runtime core for tool-first-agent — CLI + MCP for shared file-based tool-memory, registry query, and tool detection."
license = "MIT"

[[bin]]
name = "tool-first"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
which = "6"
sha2 = "0.10"
